Notebook 02: run linguistic patterns, fix missing imports, add readability figures and sentiment features

--- a/notebooks/02_linguistic_patterns.ipynb
+++ b/notebooks/02_linguistic_patterns.ipynb
@@ -2,18 +2,136 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b2dfcc3a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading dataset FutureMa/EvasionBench...\n",
+      "Dataset shape: (16726, 4)\n",
+      "spaCy model en_core_web_sm not found. Run: python -m spacy download en_core_web_sm\n",
+      "direct           8749\n",
+      "intermediate     7359\n",
+      "fully_evasive     618\n",
+      "Name: eva4b_label, dtype: int64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uid</th>\n",
+       "      <th>question</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>eva4b_label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12768</th>\n",
+       "      <td>e642181a7321aedc077ee9a40ca0b43c</td>\n",
+       "      <td>So I just wondered if you could give us a sens...</td>\n",
+       "      <td>The first one, Joel. We have, we took the pric...</td>\n",
+       "      <td>intermediate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15807</th>\n",
+       "      <td>0e14ab0cba14820c468deb83050f3b3e</td>\n",
+       "      <td>Tissue distribution is becoming an emerging th...</td>\n",
+       "      <td>Yeah, thanks for the question. It's a very imp...</td>\n",
+       "      <td>direct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15246</th>\n",
+       "      <td>9ee3b1d69b630a2ad7a45128292c7629</td>\n",
+       "      <td>Okay, that's very helpful. And then John, a qu...</td>\n",
+       "      <td>Well, the delay is a tool that's going to be d...</td>\n",
+       "      <td>direct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2678</th>\n",
+       "      <td>b122f4037a50c7f2b818dc8f3903d4a5</td>\n",
+       "      <td>All right. I assume it -- well, I assume it go...</td>\n",
+       "      <td>Yeah, I mean I can't give you any firm guidanc...</td>\n",
+       "      <td>direct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7085</th>\n",
+       "      <td>cd51840ba393ac289975c27df48681ad</td>\n",
+       "      <td>As I look at the North America business, the i...</td>\n",
+       "      <td>Sure. So, the increase Jeff was in several dif...</td>\n",
+       "      <td>intermediate</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    uid  \\\n",
+       "12768  e642181a7321aedc077ee9a40ca0b43c   \n",
+       "15807  0e14ab0cba14820c468deb83050f3b3e   \n",
+       "15246  9ee3b1d69b630a2ad7a45128292c7629   \n",
+       "2678   b122f4037a50c7f2b818dc8f3903d4a5   \n",
+       "7085   cd51840ba393ac289975c27df48681ad   \n",
+       "\n",
+       "                                                question  \\\n",
+       "12768  So I just wondered if you could give us a sens...   \n",
+       "15807  Tissue distribution is becoming an emerging th...   \n",
+       "15246  Okay, that's very helpful. And then John, a qu...   \n",
+       "2678   All right. I assume it -- well, I assume it go...   \n",
+       "7085   As I look at the North America business, the i...   \n",
+       "\n",
+       "                                                  answer   eva4b_label  \n",
+       "12768  The first one, Joel. We have, we took the pric...  intermediate  \n",
+       "15807  Yeah, thanks for the question. It's a very imp...        direct  \n",
+       "15246  Well, the delay is a tool that's going to be d...        direct  \n",
+       "2678   Yeah, I mean I can't give you any firm guidanc...        direct  \n",
+       "7085   Sure. So, the increase Jeff was in several dif...  intermediate  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Setup: imports and NLP tools\n",
+    "import sys, pathlib, os\n",
+    "# Add project root to sys.path\n",
+    "proj_root = pathlib.Path('..').resolve()\n",
+    "if str(proj_root) not in sys.path:\n",
+    "    sys.path.insert(0, str(proj_root))\n",
+    "\n",
     "from datasets import load_dataset\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import spacy\n",
     "import nltk\n",
-    "from src.utils import set_seed\n",
+    "try:\n",
+    "    from src.utils import set_seed\n",
+    "except Exception as e:\n",
+    "    print('Warning: could not import src.utils.set_seed:', e)\n",
+    "    set_seed = lambda _: None\n",
     "\n",
     "set_seed(42)\n",
     "\n",
@@ -39,10 +157,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a1f51bbe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "LEXICAL ANALYSIS\n",
+      "============================================================\n",
+      "\n",
+      "Vocabulary size by evasion category:\n",
+      "  direct: 19,777 unique words\n",
+      "  intermediate: 19,677 unique words\n",
+      "  fully_evasive: 4,043 unique words\n",
+      "\n",
+      "Total vocabulary (all answers): 25,933 unique words\n"
+     ]
+    }
+   ],
    "source": [
     "# Lexical Analysis - Vocabulary Size\n",
     "print(\"=\" * 60)\n",
@@ -78,10 +213,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "33d9d9d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "TOP UNIGRAMS BY CATEGORY\n",
+      "============================================================\n",
+      "\n",
+      "DIRECT - Top 15 unigrams:\n",
+      "   1. think: 9,739\n",
+      "   2. year: 6,588\n",
+      "   3. ve: 5,797\n",
+      "   4. going: 4,922\n",
+      "   5. really: 4,916\n",
+      "   6. just: 4,483\n",
+      "   7. quarter: 4,304\n",
+      "   8. business: 3,492\n",
+      "   9. yes: 3,169\n",
+      "  10. ll: 3,124\n",
+      "  11. right: 3,040\n",
+      "  12. million: 2,698\n",
+      "  13. good: 2,640\n",
+      "  14. lot: 2,566\n",
+      "  15. like: 2,527\n",
+      "\n",
+      "INTERMEDIATE - Top 15 unigrams:\n",
+      "   1. think: 10,202\n",
+      "   2. year: 6,158\n",
+      "   3. going: 5,345\n",
+      "   4. ve: 5,278\n",
+      "   5. really: 4,737\n",
+      "   6. just: 4,270\n",
+      "   7. quarter: 3,886\n",
+      "   8. business: 3,662\n",
+      "   9. ll: 3,527\n",
+      "  10. right: 3,043\n",
+      "  11. know: 2,951\n",
+      "  12. market: 2,892\n",
+      "  13. look: 2,886\n",
+      "  14. continue: 2,676\n",
+      "  15. growth: 2,649\n",
+      "\n",
+      "FULLY_EVASIVE - Top 15 unigrams:\n",
+      "   1. think: 416\n",
+      "   2. don: 290\n",
+      "   3. going: 245\n",
+      "   4. just: 208\n",
+      "   5. really: 195\n",
+      "   6. ll: 185\n",
+      "   7. ve: 181\n",
+      "   8. quarter: 165\n",
+      "   9. year: 165\n",
+      "  10. time: 153\n",
+      "  11. right: 152\n",
+      "  12. like: 138\n",
+      "  13. say: 133\n",
+      "  14. yes: 127\n",
+      "  15. know: 120\n",
+      "\n",
+      "============================================================\n",
+      "TOP BIGRAMS BY CATEGORY\n",
+      "============================================================\n",
+      "\n",
+      "DIRECT - Top 10 bigrams:\n",
+      "   1. little bit: 1,519\n",
+      "   2. ve got: 875\n",
+      "   3. ve seen: 734\n",
+      "   4. fourth quarter: 582\n",
+      "   5. second quarter: 519\n",
+      "   6. long term: 490\n",
+      "   7. going forward: 489\n",
+      "   8. second half: 480\n",
+      "   9. year year: 462\n",
+      "  10. half year: 430\n",
+      "\n",
+      "INTERMEDIATE - Top 10 bigrams:\n",
+      "   1. little bit: 1,193\n",
+      "   2. ve got: 737\n",
+      "   3. ve seen: 666\n",
+      "   4. long term: 610\n",
+      "   5. going forward: 529\n",
+      "   6. fourth quarter: 487\n",
+      "   7. year year: 484\n",
+      "   8. second quarter: 467\n",
+      "   9. make sure: 430\n",
+      "  10. half year: 387\n",
+      "\n",
+      "FULLY_EVASIVE - Top 10 bigrams:\n",
+      "   1. don think: 41\n",
+      "   2. don know: 35\n",
+      "   3. don want: 34\n",
+      "   4. little bit: 26\n",
+      "   5. fourth quarter: 26\n",
+      "   6. ve got: 23\n",
+      "   7. make sure: 21\n",
+      "   8. long term: 21\n",
+      "   9. going forward: 19\n",
+      "  10. think going: 19\n"
+     ]
+    }
+   ],
    "source": [
     "# Most Frequent N-grams by Category\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
@@ -119,10 +356,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7ff6e35f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "TF-IDF ANALYSIS - DISTINCTIVE TERMS\n",
+      "============================================================\n",
+      "\n",
+      "DIRECT - Top 15 TF-IDF terms:\n",
+      "   1. think: 0.0353\n",
+      "   2. year: 0.0291\n",
+      "   3. quarter: 0.0241\n",
+      "   4. ve: 0.0234\n",
+      "   5. yes: 0.0228\n",
+      "   6. going: 0.0213\n",
+      "   7. really: 0.0210\n",
+      "   8. million: 0.0206\n",
+      "   9. just: 0.0194\n",
+      "  10. business: 0.0173\n",
+      "  11. right: 0.0172\n",
+      "  12. yeah: 0.0168\n",
+      "  13. ll: 0.0158\n",
+      "  14. good: 0.0140\n",
+      "  15. don: 0.0138\n",
+      "\n",
+      "INTERMEDIATE - Top 15 TF-IDF terms:\n",
+      "   1. think: 0.0386\n",
+      "   2. year: 0.0295\n",
+      "   3. going: 0.0248\n",
+      "   4. ve: 0.0238\n",
+      "   5. quarter: 0.0234\n",
+      "   6. really: 0.0226\n",
+      "   7. just: 0.0205\n",
+      "   8. business: 0.0199\n",
+      "   9. ll: 0.0189\n",
+      "  10. know: 0.0174\n",
+      "  11. right: 0.0173\n",
+      "  12. market: 0.0167\n",
+      "  13. look: 0.0163\n",
+      "  14. growth: 0.0162\n",
+      "  15. continue: 0.0158\n",
+      "\n",
+      "FULLY_EVASIVE - Top 15 TF-IDF terms:\n",
+      "   1. think: 0.0320\n",
+      "   2. don: 0.0299\n",
+      "   3. ll: 0.0224\n",
+      "   4. going: 0.0222\n",
+      "   5. really: 0.0194\n",
+      "   6. just: 0.0192\n",
+      "   7. right: 0.0190\n",
+      "   8. time: 0.0179\n",
+      "   9. quarter: 0.0172\n",
+      "  10. yeah: 0.0169\n",
+      "  11. year: 0.0167\n",
+      "  12. ve: 0.0161\n",
+      "  13. question: 0.0155\n",
+      "  14. number: 0.0151\n",
+      "  15. say: 0.0150\n"
+     ]
+    }
+   ],
    "source": [
     "# TF-IDF Analysis - Distinguishing Terms\n",
     "print(\"\\n\" + \"=\" * 60)\n",
@@ -147,10 +446,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d6619865",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "READABILITY ANALYSIS\n",
+      "============================================================\n",
+      "\n",
+      "Readability scores by evasion category:\n",
+      "              flesch_ease               flesch_kincaid                smog  \\\n",
+      "                     mean    std median           mean   std median   mean   \n",
+      "eva4b_label                                                                  \n",
+      "direct              63.93  14.36  63.83           9.09  3.47   8.96  11.07   \n",
+      "fully_evasive       69.63  18.19  68.95           7.91  4.13   7.91   9.83   \n",
+      "intermediate        60.96  11.92  61.69           9.87  3.00   9.56  11.74   \n",
+      "\n",
+      "                            \n",
+      "                std median  \n",
+      "eva4b_label                 \n",
+      "direct         2.68  11.21  \n",
+      "fully_evasive  3.43  10.13  \n",
+      "intermediate   2.16  11.70  \n",
+      "\n",
+      "📊 Interpretation:\n",
+      "  Flesch Reading Ease: Higher = easier to read (0-100 scale)\n",
+      "  Flesch-Kincaid Grade: US grade level needed to understand\n",
+      "  SMOG Index: Years of education needed\n"
+     ]
+    }
+   ],
    "source": [
     "# Readability Metrics\n",
     "import textstat\n",
@@ -186,9 +515,25 @@
    "execution_count": null,
    "id": "385afd09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Readability Visualization\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m fig, axes \u001b[38;5;241m=\u001b[39m \u001b[43mplt\u001b[49m\u001b[38;5;241m.\u001b[39msubplots(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m3\u001b[39m, figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m15\u001b[39m, \u001b[38;5;241m5\u001b[39m))\n\u001b[1;32m      4\u001b[0m metrics \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mflesch_ease\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mflesch_kincaid\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msmog\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      5\u001b[0m titles \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFlesch Reading Ease\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFlesch-Kincaid Grade\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSMOG Index\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Readability Visualization\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "os.makedirs('notebooks/figures', exist_ok=True)\n",
+    "\n",
     "fig, axes = plt.subplots(1, 3, figsize=(15, 5))\n",
     "\n",
     "metrics = ['flesch_ease', 'flesch_kincaid', 'smog']\n",
@@ -405,8 +750,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.9.6)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
