Refactor Notebook 02: add overview section, update execution counts, and enhance output for POS and NER analysis

--- a/notebooks/02_linguistic_patterns.ipynb
+++ b/notebooks/02_linguistic_patterns.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "458c1622",
+   "metadata": {},
+   "source": [
+    "# 02 - Linguistic Patterns\n",
+    "\n",
+    "**Overview:** Lexical, syntactic, readability, and hedging analysis of answers by evasion label. Produce candidate linguistic features for modeling and interpretability."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "b2dfcc3a",
    "metadata": {},
    "outputs": [
@@ -10,8 +20,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Python executable (notebook kernel): /Users/dustinober/Projects/EvasionBench/.venv/bin/python\n",
+      "spaCy version: 3.8.11\n",
+      "en_core_web_sm spec: ModuleSpec(name='en_core_web_sm', loader=<_frozen_importlib_external.SourceFileLoader object at 0x15daa7c40>, origin='/Users/dustinober/Projects/EvasionBench/.venv/lib/python3.9/site-packages/en_core_web_sm/__init__.py', submodule_search_locations=['/Users/dustinober/Projects/EvasionBench/.venv/lib/python3.9/site-packages/en_core_web_sm'])\n",
       "Loading dataset FutureMa/EvasionBench...\n",
       "Dataset shape: (16726, 4)\n",
+      "spaCy model en_core_web_sm loaded successfully (from setup)\n",
       "direct           8749\n",
       "intermediate     7359\n",
       "fully_evasive     618\n",
@@ -108,7 +122,7 @@
        "7085   Sure. So, the increase Jeff was in several dif...  intermediate  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "a1f51bbe",
    "metadata": {},
    "outputs": [
@@ -220,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "33d9d9d9",
    "metadata": {},
    "outputs": [
@@ -363,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "7ff6e35f",
    "metadata": {},
    "outputs": [
@@ -453,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "d6619865",
    "metadata": {},
    "outputs": [
@@ -519,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "385afd09",
    "metadata": {},
    "outputs": [
@@ -559,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "6e865bdc",
    "metadata": {},
    "outputs": [
@@ -646,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "id": "7f84dc35",
    "metadata": {},
    "outputs": [
@@ -655,7 +669,29 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "⚠️ spaCy model not loaded. Install with: python -m spacy download en_core_web_sm\n"
+      "============================================================\n",
+      "PART-OF-SPEECH ANALYSIS\n",
+      "============================================================\n",
+      "\n",
+      "Average POS proportions by label:\n",
+      "\n",
+      "DIRECT:\n",
+      "  NOUN: 0.177\n",
+      "  VERB: 0.100\n",
+      "  ADJ: 0.063\n",
+      "  ADV: 0.054\n",
+      "\n",
+      "INTERMEDIATE:\n",
+      "  NOUN: 0.159\n",
+      "  VERB: 0.101\n",
+      "  ADJ: 0.063\n",
+      "  ADV: 0.061\n",
+      "\n",
+      "FULLY_EVASIVE:\n",
+      "  NOUN: 0.129\n",
+      "  VERB: 0.114\n",
+      "  ADV: 0.056\n",
+      "  ADJ: 0.054\n"
      ]
     }
    ],
@@ -700,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "0246e07e",
    "metadata": {},
    "outputs": [
@@ -709,7 +745,27 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "⚠️ spaCy model not loaded. Install with: python -m spacy download en_core_web_sm\n"
+      "============================================================\n",
+      "NAMED ENTITY RECOGNITION\n",
+      "============================================================\n",
+      "\n",
+      "DIRECT - Average entity counts (n=200):\n",
+      "  ORG: 1.11\n",
+      "  PERCENT: 0.35\n",
+      "  MONEY: 0.29\n",
+      "  NUMBER: 0.00\n",
+      "\n",
+      "INTERMEDIATE - Average entity counts (n=200):\n",
+      "  ORG: 1.30\n",
+      "  PERCENT: 0.36\n",
+      "  MONEY: 0.27\n",
+      "  NUMBER: 0.00\n",
+      "\n",
+      "FULLY_EVASIVE - Average entity counts (n=200):\n",
+      "  ORG: 0.42\n",
+      "  PERCENT: 0.12\n",
+      "  MONEY: 0.09\n",
+      "  NUMBER: 0.00\n"
      ]
     }
    ],
@@ -782,19 +838,6 @@
     "- Use identified features for Notebook 4 (traditional ML baselines)\n",
     "- Validate linguistic markers with model interpretability (Notebook 9)\n",
     "- Develop rule-based classifier from these markers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dba675ca",
-   "metadata": {},
-   "source": [
-    "# 02 - Linguistic Patterns\n",
-    "\n",
-    "**Objectives:**\n",
-    "- Lexical and syntactic analysis by label\n",
-    "- Readability, POS, NER, hedging analysis\n",
-    "- Produce feature candidates for models"
    ]
   }
  ],
