Add top title cells to notebooks 01-10 (ensure titles at top for all notebooks)

--- a/notebooks/05_embedding_baselines.ipynb
+++ b/notebooks/05_embedding_baselines.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "526a3856",
+   "metadata": {},
+   "source": [
+    "# 05 - Embedding Baselines\n",
+    "\n",
+    "**Overview:** Build embedding-based classifiers and simple neural baselines to evaluate representation performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "022973e7",
