--- a/notebooks/06_transformer_finetuning.ipynb
+++ b/notebooks/06_transformer_finetuning.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f4fe67a8",
+   "metadata": {},
+   "source": [
+    "# 06 - Transformer Fine-Tuning\n",
+    "\n",
+    "**Overview:** Fine-tune transformer models (DistilBERT/DeBERTa/RoBERTa) and evaluate with class imbalance handling strategies."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cceef865",
