--- a/notebooks/08_multitask_learning.ipynb
+++ b/notebooks/08_multitask_learning.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "72a9200a",
+   "metadata": {},
+   "source": [
+    "# 08 - Multi-Task Learning\n",
+    "\n",
+    "**Overview:** Implement joint training with auxiliary tasks (sentiment, topic) to improve minority-class robustness."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7dbe903b",
