--- a/notebooks/09_explainability_analysis.ipynb
+++ b/notebooks/09_explainability_analysis.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9e861059",
+   "metadata": {},
+   "source": [
+    "# 09 - Explainability & Interpretability\n",
+    "\n",
+    "**Overview:** Run SHAP/LIME analyses, attention probing, and create interpretable rule-based checks to validate model behavior."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2402533f",
