--- a/notebooks/10_label_quality_study.ipynb
+++ b/notebooks/10_label_quality_study.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5dd16a92",
+   "metadata": {},
+   "source": [
+    "# 10 - Label Quality Study\n",
+    "\n",
+    "**Overview:** Prepare and run manual annotation and noise-estimation analyses (Cleanlab) to measure label quality and impact on model performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "aafca20a",
