--- a/notebooks/01_data_quality_and_statistics.ipynb
+++ b/notebooks/01_data_quality_and_statistics.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e9cefe93",
+   "metadata": {},
+   "source": [
+    "# 01 - Data Quality & Statistics\n",
+    "\n",
+    "**Overview:** Inspect dataset quality, distributions, missingness, and summary statistics to prepare for modeling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99002836",
+   "metadata": {},
+   "source": [
+    "# 01 - Data Quality & Statistics\n",
+    "\n",
+    "**Overview:** Inspect dataset quality, distributions, missingness, and summary statistics to inform analyses and modeling."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "73a25ed8",
