--- a/notebooks/03_qa_interaction_analysis.ipynb
+++ b/notebooks/03_qa_interaction_analysis.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "86209005",
+   "metadata": {},
+   "source": [
+    "# 03 - Q&A Interaction Analysis\n",
+    "\n",
+    "**Overview:** Analyze question-answer interactions, semantic similarity, question types, and topic patterns to surface conversational signals associated with evasion."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1461bb49",
+   "metadata": {},
+   "source": [
+    "# 03 - Q&A Interaction Analysis\n",
+    "\n",
+    "**Overview:** Analyze interactions between questions and answers to surface conversational patterns and question–answer dynamics."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7112db0c",
