--- a/notebooks/04_traditional_ml_baselines.ipynb
+++ b/notebooks/04_traditional_ml_baselines.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6f8026ff",
+   "metadata": {},
+   "source": [
+    "# 04 - Traditional ML Baselines\n",
+    "\n",
+    "**Overview:** Build TF-IDF baselines (Logistic Regression, SVM) and engineered-feature models; evaluate class-imbalance strategies and baseline performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2b16660",
+   "metadata": {},
+   "source": [
+    "# 04 - Traditional ML Baselines\n",
+    "\n",
+    "**Overview:** Implement TF-IDF and engineered-feature baselines (e.g., Logistic Regression, XGBoost) and evaluate class imbalance strategies."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e566d83e",
