--- a/notebooks/07_advanced_transformer_methods.ipynb
+++ b/notebooks/07_advanced_transformer_methods.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "de565199",
+   "metadata": {},
+   "source": [
+    "# 07 - Advanced Transformer Methods\n",
+    "\n",
+    "**Overview:** Run parameter-efficient fine-tuning experiments (LoRA, adapters), distillation, and model compression techniques."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3717d955",
